# OOP-sfSnake

./: CMakeLists.txt  README.md  游戏设计说明.md
src/: Game.cpp  Game.h  main.cpp
src/element/: Button.cpp  Button.h  Fruit.cpp  Fruit.h  Grid.cpp  Grid.h  OptionButton.cpp  OptionButton.h  Snake.cpp  Snake.h  TitleSprite.cpp  TitleSprite.h  Wall.cpp  Wall.h
src/screen/: GameOverScreen.cpp  GameOverScreen.h  GameScreen.cpp  GameScreen.h  MenuScreen.cpp  MenuScreen.h  OptionScreen.cpp  OptionScreen.h  Screen.h
